--- a/frontend/src/styles/driverdashboard.css
+++ b/frontend/src/styles/driverdashboard.css
@@ -297,6 +297,7 @@
     height: 171px;
     /* margin: var(--space-8); */
     border-radius: var(--space-12);
+    cursor: pointer;
 }
 
 .cta-pay{
@@ -304,6 +305,14 @@
     font-weight: 600;
     font-size: 20px;
     padding-left: 16px;
+}
+
+.cta-chv-btn{
+    margin-top: 32px;
+}
+
+.cta-img-container{
+    position: absolute;
 }
 
 .small-txt {
