completed the passanger dashboard ui

--- a/frontend/src/styles/driverdashboard.css
+++ b/frontend/src/styles/driverdashboard.css
@@ -285,6 +285,7 @@
 .cta-btn-container{
     display: flex;
     flex-wrap: wrap;
+    font-family: 'quicksand', sans-serif;
     justify-content: space-evenly; /* or use space-between for edges alignment */
     height: auto;
     margin-top: var(--space-40);
