Adjusted some images on the driver dashboard

--- a/frontend/src/styles/driverdashboard.css
+++ b/frontend/src/styles/driverdashboard.css
@@ -291,6 +291,7 @@
     margin-top: var(--space-40);
     gap: var(--space-16);
     padding-inline: 20px; /* add horizontal padding */
+    position: relative;
 }
 
 .cta-btn{
