--- a/frontend/src/dashboards/Driver/features/Profile.css
+++ b/frontend/src/dashboards/Driver/features/Profile.css
@@ -173,3 +173,18 @@
     border: none;
     border-radius: 8px;
 }
+
+.preview-grid {
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.preview-img {
+    width: 100%;
+    height: 90px;
+    object-fit: cover;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+}
